--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.2",
+        "cors": "^2.8.5",
         "vue": "^3.5.25",
         "vue-router": "^4.6.3"
     }
